# sable-he-research

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_v0.10.0_PHASE9_BENCHMARKS.md  RELEASE_NOTES_v0.11.0_PHASE10_COMPACTION_THEORY.md  RELEASE_NOTES_v0.2.1_PUBLIC_RESEARCH.md  RELEASE_NOTES_v0.2_FL.md  RELEASE_NOTES_v0.3.1_PHASE2_PQC_WRAPPER_QA.md  RELEASE_NOTES_v0.4.0_PHASE3_CRYPTANALYSIS.md  RELEASE_NOTES_v0.4.1_CLEAN_PUBLIC.md  RELEASE_NOTES_v0.4_C3_SEEDED.md  RELEASE_NOTES_v0.5.0_PHASE4_HARDENING.md  RELEASE_NOTES_v0.6.0_PHASE5_STANDARDIZATION.md  RELEASE_NOTES_v0.6_C4_PROJECTIVE.md  RELEASE_NOTES_v0.7.0_PHASE6_PROOFS.md  RELEASE_NOTES_v0.7_C5_ARITHMETIC.md  RELEASE_NOTES_v0.7_C5_OPERATIONS.md  RELEASE_NOTES_v0.7_C5_OPS_BASELINES.md  RELEASE_NOTES_v0.8.0_PHASE7_PARAMETERS.md  RELEASE_NOTES_v0.8_C6_RELATIONS.md  RELEASE_NOTES_v0.9.0_PHASE8_ATTACK_ESTIMATOR.md  RELEASE_NOTES_v0.9.0_PHASE8_ATTACK_ESTIMATORS.md  RELEASE_NOTES_v0.9.0_PHASE8_LPN_ESTIMATORS.md  RELEASE_NOTES_v0.9_C7_FINAL.md  RELEASE_NOTES_v0.9_C7_READY.md  RELEASE_NOTES_v1.0_C8_READINESS.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
benchmarks/: benchmark_arithmetic.py  benchmark_boolean.py  benchmark_fl.py
docs/: API_REFERENCE.md  BUILD_AND_TEST_REPORT_v0.2.0.md  CITATION.md  CLI_REFERENCE.md  CRYPTANALYSIS_CHALLENGE.md  CRYPTANALYSIS_REVIEW.md  FL_AGGREGATION.md  FL_AGGREGATION_GUIDE.md  GITHUB_PYPI_RELEASE_GUIDE.md  INSTALLATION.md  PHASE1_BUILD_AND_TEST_REPORT.md  PQC_WRAPPER.md  PUBLIC_RELEASE_GUIDE.md  PUBLIC_REPO_MANIFEST.md  PUBLIC_RESEARCH_RELEASE.md  PUBLISHING.md  QUICKSTART.md  RELEASE_CHECKLIST.md  SECURITY_POSITIONING.md  SECURITY_SCOPE.md  TENSOR_ADAPTERS.md  USER_GUIDE.md  arithmetic_microbench_c4_toy_clean.csv  arithmetic_microbench_c4_toy_clean.json  arithmetic_microbench_c4_toy_clean.txt  attack_candidate_depth1_rough.txt  attack_estimator_model.md  attack_estimator_notes.md  attack_estimator_output.txt  attack_estimator_prototype_medium_output.txt  attack_prototype_medium_output.txt  attack_sweep_output.txt  baseline_benchmark_plan.md  baseline_model_output.txt  baseline_model_table.csv  baseline_proxy_output.txt  bench_boolean_and.csv  bench_boolean_and.json  bench_boolean_and_output.txt  bench_boolean_xor.csv  (+104 more)
examples/: 01_quickstart_mul.py  02_arithmetic_suite.py  03_boolean_gates.py  04_estimators.py  05_fedavg.py  05_fedavg_arrays.py  06_fedavg_model_tree.py  06_fl_methods.py  07_plain_robust_aggregation.py  08_pqc_envelope_demo.py  09_pqc_signed_fedavg_update.py  10_cryptanalysis_bundle.py  README.md  advanced_attack_estimate.py  arithmetic_demo.py  arithmetic_operations.py  attack_estimator.py  attack_estimator_package.py  benchmark_suite.py  boolean_gates.py  compaction_theory.py  cryptanalysis_bundle.py  estimator_demo.py  fedavg_arrays.py  fl_fedavg.py  fl_numpy_keras_weights.py  lpn_estimator_report.py  parameter_candidates.py  parameter_estimate.py  parameter_framework.py  parameter_sets.py  pqc_envelope_demo.py  proof_package.py  quickstart.py  quickstart_arithmetic.py  quickstart_multiply.py  security_proof_package.py  standardization_review_package.py
experiments/: openfhe_benchmark_harness.py  run_arithmetic_correctness.py  run_attack_estimator.py  run_attack_sweep.py  run_baseline_model.py  run_baseline_proxy.py  run_benchmark_proxy.py  run_c2_attack_surface.py  run_c2_block_dictionary.py  run_c4_compaction_correctness.py  run_c4_coverage.py  run_c4_v123_comparison.py  run_c5_arithmetic_suite.py  run_c5_attack_estimator.py  run_c5_c4_surface.py  run_c5_compare_baselines.py  run_c5_surface.py  run_c6_parameter_grid.py  run_c6_relation_estimator.py  run_c7_arithmetic_suite.py  run_c7_basis_screen.py  run_c7_final_arithmetic.py  (+13 more)
(+295 files in other folders)
